Bug 316249 - kmail does not remember sieve user & password
Summary: kmail does not remember sieve user & password
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: sieve (other bugs)
Version First Reported In: 4.10
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-06 21:27 UTC by Piotr Budny
Modified: 2013-07-10 19:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Budny 2013-03-06 21:27:23 UTC
kmail does not saves username and password (even with the checkbox checked) when alternative url is set up


Reproducible: Always

Steps to Reproduce:
1. check server uses sieve in account setting, filtering tab
2. pass alternate url address for sieve (e.g. sieve://172.168...:4190)
3. try to manage sieve scripts (enter user & password, check remember)
4. quit kmail
5. open kmail

Actual Results:  
kmail does not remember sieve user & password
asks for username and password every run


Expected Results:  
does not ask for user/pass

kubuntu precise 4.10 rc3 also affected
Comment 1 Laurent Montel 2013-04-15 07:04:42 UTC
I confirm it.
Comment 2 Laurent Montel 2013-07-05 12:19:52 UTC
Ok I can't fix it for 4.11 but will fix it for 4.12
By default imap account doesn't authorize to define specific user and password.
Will fix it in 4.12
Comment 3 Laurent Montel 2013-07-10 19:18:09 UTC
Git commit e583f65d9b160f7f451c8e1dd4d1d0a65e9ff4fa by Montel Laurent.
Committed on 10/07/2013 at 19:17.
Pushed by mlaurent into branch 'master'.

Fix Bug 316249 - kmail does not remember sieve user & password

FIXED-IN: 4.12

M  +8    -0    resources/imap/imapresource.kcfg
M  +41   -1    resources/imap/settings.cpp
M  +3    -0    resources/imap/settings.h
M  +50   -6    resources/imap/setupserver.cpp
M  +2    -1    resources/imap/setupserver.h
M  +80   -14   resources/imap/setupserverview_desktop.ui

http://commits.kde.org/kdepim-runtime/e583f65d9b160f7f451c8e1dd4d1d0a65e9ff4fa
Comment 4 Laurent Montel 2013-07-10 19:19:30 UTC
Git commit 2be2a4a2ad966ae96227f3e67d635e70e1f3989a by Montel Laurent.
Committed on 10/07/2013 at 19:18.
Pushed by mlaurent into branch 'master'.

Need for Bug 316249 - kmail does not remember sieve user & password

M  +21   -0    libksieve/ksieveui/util.cpp
M  +12   -0    pimcommon/util/imapresource.kcfg

http://commits.kde.org/kdepim/2be2a4a2ad966ae96227f3e67d635e70e1f3989a
Comment 5 Laurent Montel 2013-07-10 19:20:00 UTC
Now we can store password/user directly in imap dialogbox.