Fix Bug 316249 - kmail does not remember sieve user & password

FIXED-IN: 4.12
BUG: 316249